reserved/pwc-ds-k8s-yaml-config-reserved/identity-config/identity-api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-identity-api
  namespace: identity
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api-account.local.mnv
    http:
      paths:
      - path: /
        backend:
          serviceName: cluster-ip-identity-api
          servicePort: 5200
  tls:
  - hosts:
    - api-account.local.mnv
    secretName: local-mnv
